# Tap

./: .gitignore  CMakeLists.txt  CONVERSION_PLAN.md  Cargo.toml  IMPLEMENTATION.md  README.md
examples/: add.tap  syntax.tap
src/: .ninja_deps  .ninja_log  ast.cppm  ast.rs  diagnostics.rs  environment.rs  interpreter.cppm  interpreter.rs  lexer.cppm  lexer.rs  lib.rs  main.cpp  main.rs  parser.cppm  parser.rs  utils.rs
tap-lang/: .gitignore  Cargo.toml
tap-lang/src/: ast.rs  environment.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
tap-lang/tests/: interpreter.rs  parser.rs
tap-lang/tests/programs/: fib.tap  fib_lambda.tap  inline_lambda.tap
tests/: CMakeLists.txt  integration.rs  interpreter.rs  parser.rs  parser_test.cpp
tests/programs/: array_mutation.tap  conditional_as_value.tap  dodaj.tap  enum.tap  fib.tap  fib_lambda.tap  hello.tap  hi_func.tap  inline_lambda.tap  iterative_fib.tap  lambda.tap  lambdas2.tap  list_sum.tap  match.tap  option_type.tap  silnia.tap  structs.tap
